# backgammon_trainer

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  hooks  main.py  pyproject.toml  requirements-dev.txt  requirements.develop.txt  temp.json
.github/workflows/: nuitkabuild.yml
backgammon/: board.py  board_left.txt  board_right.txt  colors.py  games.py  shell.py
backgammon/data/: opening_moves.csv
src/bgtrainer/: bgtrainer.py  board.py  colors.py  database.py  games.py  highscores.py  main.py  shell.py
src/bgtrainer/data/: data.db  logo.txt  opening_moves.csv
tests/: board_test.py  isight_test.py  shell_test.py  test_shell.py
